Replace kafka-junit with testcontainers